--- a/client/svelte-view/index.html
+++ b/client/svelte-view/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>altV-vChat</title>
+        <title>Vite + Svelte + TS</title>
+      <script type="module" crossorigin src="/assets/index.ea957695.js"></script>
     </head>
     <body>
         <div id="app"></div>
-        <script type="module" src="/src/main.ts"></script>
+        
     </body>
 </html>
