--- a/client/svelte-view/index.html
+++ b/client/svelte-view/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + Svelte + TS</title>
-      <script type="module" crossorigin src="/assets/index.ea957695.js"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela Round" />
+        <title>altV-vChat</title>
+      <script type="module" crossorigin src="/assets/index.5266787f.js"></script>
+      <link rel="stylesheet" href="/assets/index.78fe8d9a.css">
     </head>
     <body>
         <div id="app"></div>
