--- a/client/svelte-view/index.html
+++ b/client/svelte-view/index.html
@@ -5,11 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela Round" />
         <title>altV-vChat</title>
-      <script type="module" crossorigin src="/assets/index.aeb8717f.js"></script>
-      <link rel="stylesheet" href="/assets/index.b4b27632.css">
+        <script type="module" crossorigin src="./assets/index.454fdb4e.js"></script>
+        <link rel="stylesheet" href="./assets/index.b4b27632.css" />
     </head>
     <body>
         <div id="app"></div>
-        
     </body>
 </html>
